--- a/cb_medical_workflow_plandefinition/views/workflow_plan_definition.xml
+++ b/cb_medical_workflow_plandefinition/views/workflow_plan_definition.xml
@@ -17,6 +17,9 @@
                 <field name="is_billable"/>
                 <field name="is_breakdown"/>
             </group>
+            <xpath expr="//page[@name='actions']/field[@name='direct_action_ids']/tree/field[@name='execute_plan_definition_id']" position="after">
+                <field name="is_billable"/>
+            </xpath>
         </field>
     </record>
 
