--- a/cb_medical_workflow_plandefinition/views/workflow_plan_definition_action.xml
+++ b/cb_medical_workflow_plandefinition/views/workflow_plan_definition_action.xml
@@ -16,6 +16,12 @@
             <field name="parent_id" position="after">
                 <field name="is_billable" />
             </field>
+            <xpath expr="//page[@name='child_actions']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
+            <field name="execute_plan_definition_id" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
         </field>
     </record>
 
