--- a/cb_medical_workflow_plandefinition/views/medical_request_views.xml
+++ b/cb_medical_workflow_plandefinition/views/medical_request_views.xml
@@ -15,7 +15,7 @@
         <field name="priority" eval="16"/>
         <field name="arch" type="xml">
             <field name="encounter_id" position="after">
-                <field name="center_id" options="{'no_create': True}"/>
+                <field name="center_id" options="{'no_create': True}" attrs="{'readonly': [('is_editable', '=', False)]}"/>
             </field>
         </field>
     </record>
