Share field values between sale_order and sale_order_line storing it's value

--- a/cb_medical_sale_invoice/views/sale_order_views.xml
+++ b/cb_medical_sale_invoice/views/sale_order_views.xml
@@ -10,6 +10,8 @@
                        attrs="{'invisible': [('encounter_id', '=', False)]}"/>
                 <field name="patient_name"
                        attrs="{'invisible': [('encounter_id', '=', False)]}"/>
+                <field name="subscriber_id"
+                       attrs="{'invisible': [('encounter_id', '=', False)]}"/>
             </field>
 
             <xpath expr="//field[@name='order_line']/form//field[@name='product_id']"
