--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -2,19 +2,19 @@
 <odoo>
     <template id="report_invoice_document" inherit_id="account.report_invoice_document">
         <xpath expr="//table[@name='invoice_line_table']/thead/tr/th[2]" position="after">
-            <th t-if="o.is_medical">Patient</th>
-            <th t-if="o.is_medical">Subscriber</th>
-            <th t-if="o.is_medical">Authorization</th>
+            <th t-if="o.is_medical and o.show_patient">Patient</th>
+            <th t-if="o.is_medical and o.show_subscriber">Subscriber</th>
+            <th t-if="o.is_medical and o.show_authorization">Authorization</th>
         </xpath>
         <xpath expr="//table[@name='invoice_line_table']/tbody/tr[1]/td[2]" position="after">
-            <td t-if="o.is_medical and a.show_patient"><span t-field="l.patient_name"/></td>
-            <td t-if="o.is_medical and a.show_subscriber"><span t-field="l.subscriber_id"/></td>
-            <td t-if="o.is_medical and a.show_authorization"><span t-field="l.authorization_number"/></td>
+            <td t-if="o.is_medical and o.show_patient"><span t-field="l.patient_name"/></td>
+            <td t-if="o.is_medical and o.show_subscriber"><span t-field="l.subscriber_id"/></td>
+            <td t-if="o.is_medical and o.show_authorization"><span t-field="l.authorization_number"/></td>
         </xpath>
         <xpath expr="//table[@name='invoice_line_table']/tbody/tr[2]/td[2]" position="after">
-            <td t-if="o.is_medical"/>
-            <td t-if="o.is_medical"/>
-            <td t-if="o.is_medical"/>
+            <td t-if="o.is_medical and o.show_patient"/>
+            <td t-if="o.is_medical and o.show_subscriber"/>
+            <td t-if="o.is_medical and o.show_authorization"/>
         </xpath>
     </template>
 </odoo>
