--- a/cb_medical_sale_invoice/views/res_partner_views.xml
+++ b/cb_medical_sale_invoice/views/res_partner_views.xml
@@ -22,6 +22,7 @@
                         </group>
                         <group>
                             <field name="show_authorization"/>
+                            <field name="invoice_nomenclature_id"/>
                         </group>
                     </group>
                 </page>
