--- a/cb_medical_sale_discount/views/medical_sale_discount_views.xml
+++ b/cb_medical_sale_discount/views/medical_sale_discount_views.xml
@@ -15,6 +15,13 @@
             <form string="Medical discount">
                 <header/>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="toggle_active" type="object"
+                                class="oe_stat_button" icon="fa-archive">
+                            <field name="active" widget="boolean_button"
+                                   options='{"terminology": "archive"}'/>
+                        </button>
+                    </div>
                     <group>
                         <field name="name"/>
                         <field name="description"/>
