[ADD] performer on creation of services

--- a/cb_medical_workflow_plandefinition/views/workflow_plan_definition.xml
+++ b/cb_medical_workflow_plandefinition/views/workflow_plan_definition.xml
@@ -17,6 +17,7 @@
                 <field name="is_billable"/>
                 <field name="third_party_bill"/>
                 <field name="is_breakdown"/>
+                <field name="performer_required"/>
             </group>
             <xpath expr="//page[@name='actions']/field[@name='direct_action_ids']/tree/field[@name='execute_plan_definition_id']" position="after">
                 <field name="is_billable"/>
