--- a/cb_medical_administration_healthcare_service/views/res_partner_views.xml
+++ b/cb_medical_administration_healthcare_service/views/res_partner_views.xml
@@ -18,7 +18,7 @@
                 <attribute name="attrs">{'required': [('is_practitioner','=',True), ('is_healthcare_service', '=', False)], 'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)],'readonly':[('edit_practitioner', '=', False)]}</attribute>
             </field>
 
-            <field name="specialty_id" options="{'no_create': True}" position="attributes">
+            <field name="specialty_id" position="attributes">
                 <attribute name="attrs">{'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)],'readonly':[('edit_practitioner', '=', False)], 'required': [('specialty_required', '=', True)]}</attribute>
             </field>
         </field>
