--- a/cb_medical_sale_discount/views/medical_sale_discount_views.xml
+++ b/cb_medical_sale_discount/views/medical_sale_discount_views.xml
@@ -75,7 +75,7 @@
     <menuitem id="medical_sale_discount_menu"
               name="Medical Discounts"
               sequence="90"
-              parent="medical_base.medical_root_financial"
+              parent="medical_base.medical_root_configuration"
               action="medical_sale_discount_action"/>
 
 
