[ADD] discount on agreement

--- a/cb_medical_sale_invoice/views/medical_coverage_agreement_view.xml
+++ b/cb_medical_sale_invoice/views/medical_coverage_agreement_view.xml
@@ -15,6 +15,7 @@
         <field name="arch" type="xml">
             <field name="principal_concept" position="after">
                 <field name="file_reference"/>
+                <field name="discount"/>
             </field>
         </field>
     </record>
