--- a/cb_medical_workflow_plandefinition/views/medical_request_views.xml
+++ b/cb_medical_workflow_plandefinition/views/medical_request_views.xml
@@ -15,7 +15,19 @@
         <field name="priority" eval="16"/>
         <field name="arch" type="xml">
             <field name="encounter_id" position="after">
-                <field name="center_id" options="{'no_create': True}" attrs="{'readonly': [('is_editable', '=', False)]}"/>
+                <field name="center_id" options="{'no_create': True, 'no_open': True}" attrs="{'readonly': [('is_editable', '=', False)]}"/>
+            </field>
+        </field>
+    </record>
+
+    <record id="medical_request_form_center" model="ir.ui.view">
+        <field name="name">medical.request.view.form</field>
+        <field name="model">medical.request</field>
+        <field name="inherit_id" ref="medical_request_form"/>
+        <field name="groups_id" eval="[(4, ref('medical_administration_location.group_medical_location_list'))]"/>
+        <field name="arch" type="xml">
+            <field name="center_id" position="attributes">
+                <attribute name="options">{'no_open': False, 'no_create': True}</attribute>
             </field>
         </field>
     </record>
