--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -25,7 +25,7 @@
             <attribute name="t-if">1==0</attribute>
         </xpath>
         <xpath expr="//div[@t-if='o.partner_id.ref']" position="attributes">
-            <attribute name="t-if">1==0</attribute>
+            <attribute name="t-if">o.is_medical and not o.encounter_id</attribute>
         </xpath>
     </template>
 </odoo>
