[ADD] cb_invoice_views

--- a/cb_medical_sale_invoice/views/account_invoice_views.xml
+++ b/cb_medical_sale_invoice/views/account_invoice_views.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
+    <record id="view_account_invoice_customer_form" model="ir.ui.view">
+        <field name="model">account.invoice</field>
+        <field name="inherit_id" ref="account.invoice_form"/>
+        <field name="arch" type="xml">
+           <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='product_id']" position="after">
+               <field name="patient_name" readonly="1"/>
+           </xpath>
+        </field>
+    </record>
+
     <record id="view_invoice_line_form" model="ir.ui.view">
         <field name="name">account.invoice.line.form</field>
         <field name="model">account.invoice.line</field>
