--- a/cb_medical_sale_invoice/views/account_invoice_views.xml
+++ b/cb_medical_sale_invoice/views/account_invoice_views.xml
@@ -2,6 +2,7 @@
 <odoo>
 
     <record id="view_account_invoice_customer_form" model="ir.ui.view">
+        <field name="name">account.invoice.form</field>
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_form"/>
         <field name="arch" type="xml">
