[IMP] cb_medical_sale_invoice Swap addresses

--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -28,4 +28,28 @@
             <attribute name="t-if">o.is_medical and not o.encounter_id</attribute>
         </xpath>
     </template>
+
+    <template id="sale.report_invoice_document_inherit_sale" inherit_id="account.report_invoice_document">
+        <xpath expr="//div[@name='invoice_address']" position="attributes">
+            <attribute name="groups">!sale.group_delivery_invoice_address</attribute>
+        </xpath>
+        <xpath expr="//div[@name='invoice_address']" position="before">
+            <t t-set="set_shipping_address" t-value="o.partner_shipping_id and (o.partner_shipping_id != o.partner_id)"/>
+            <div class="col-xs-6" groups="sale.group_delivery_invoice_address">
+                <div t-if="set_shipping_address">
+                    <strong>Invoicing address:</strong>
+                    <div t-field="o.partner_id"
+                        t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
+                    <div t-if="o.partner_id.vat" class="mt16"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></div>
+                </div>
+            </div>
+
+            <div class="col-xs-5 col-xs-offset-1" groups="sale.group_delivery_invoice_address">
+                <div t-esc="o.partner_shipping_id or o.partner_id"
+                    t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
+                <div t-if="not set_shipping_address and o.partner_id.vat" class="mt16"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></div>
+            </div>
+        </xpath>
+    </template>
+
 </odoo>
