[FIX] cb_medical_sale_invoice <br> address

--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -32,12 +32,12 @@
     <template id="sale.report_invoice_document_inherit_sale" inherit_id="account.report_invoice_document">
         <xpath expr="//div[@name='invoice_address']" position="attributes">
             <attribute name="groups">!sale.group_delivery_invoice_address</attribute>
+            <attribute name="class">col-xs-6 col-xs-offset-6</attribute>
         </xpath>
         <xpath expr="//div[@name='invoice_address']" position="before">
             <t t-set="set_shipping_address" t-value="o.partner_shipping_id and (o.partner_shipping_id != o.partner_id)"/>
-            <div class="col-xs-6" groups="sale.group_delivery_invoice_address">
+            <div class="col-xs-6" groups="sale.group_delivery_invoice_address" name="cb_invoice_address">
                 <div t-if="set_shipping_address">
-                    <strong>Invoicing address:</strong>
                     <div t-field="o.partner_id"
                         t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                     <div t-if="o.partner_id.vat" class="mt16"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></div>
@@ -45,10 +45,20 @@
             </div>
 
             <div class="col-xs-5 col-xs-offset-1" groups="sale.group_delivery_invoice_address">
-                <div t-esc="o.partner_shipping_id or o.partner_id"
                     t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                 <div t-if="not set_shipping_address and o.partner_id.vat" class="mt16"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></div>
             </div>
+        </xpath>
+    </template>
+
+    <template id="report_invoice_document_inherit_medical_invoice" inherit_id="sale.report_invoice_document_inherit_sale">
+        <xpath expr="//div[@name='invoice_address']/.." position="before">
+            <br></br>
+            <br></br>
+            <br></br>
+        </xpath>
+        <xpath expr="//div[@name='cb_invoice_address']/div/div[@t-field='o.partner_id']" position="before">
+            <strong>Invoicing address:</strong>
         </xpath>
     </template>
 
