--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -45,6 +45,7 @@
             </div>
 
             <div class="col-xs-5 col-xs-offset-1" groups="sale.group_delivery_invoice_address">
+                <div t-esc="o.partner_shipping_id or o.partner_id"
                     t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                 <div t-if="not set_shipping_address and o.partner_id.vat" class="mt16"><t t-esc="o.company_id.country_id.vat_label or 'TIN'"/>: <span t-field="o.partner_id.vat"/></div>
             </div>
