[FIX] facturae_mod_303

--- a/cb_l10n_es_aeat_mod303/views/aeat_mod_303report.xml
+++ b/cb_l10n_es_aeat_mod303/views/aeat_mod_303report.xml
@@ -9,7 +9,7 @@
                 report_type="qweb-pdf"
                 name="cb_l10n_es_aeat_mod303.report_eaet_mod_303"
                 file="cb_l10n_es_aeat_mod303.report_eaet_mod_303"
-                print_report_name="('report_name')"
+                print_report_name="('AEAT_MOD303')"
         />
 
         <template id="report_eaet_mod_303">
@@ -48,9 +48,9 @@
                                 <div t-if="o.allow_posting">
                                     <b>Journal: </b>
                                     <span t-esc="o.journal_id.name"/> <br></br>
+                                    <b>Counterpart account: </b>
+                                    <span t-esc="o.counterpart_account_id.name"/><br></br>
                                 </div>
-                                <b>Counterpart account: </b>
-                                <span t-esc="o.counterpart_account_id.name"/><br></br>
                                 <b>L.R. VAT number: </b>
                                 <span t-esc="o.representative_vat"/><br></br>
                                 <b>Support type: </b>
@@ -90,34 +90,34 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-3">
-                                <b>[27] VAT payable:</b>
-                                <span t-field="o.total_devengado"/><br></br>
-                                <b>[45] VAT receivable:</b>
-                                <span t-field="o.total_deducir"/><br></br>
-                                <b>General scheme result:</b>
-                                <span t-field="o.casilla_46"/><br></br>
+                                <b>[27] VAT payable: </b>
+                                <span t-field="o.total_devengado" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
+                                <b>[45] VAT receivable: </b>
+                                <span t-field="o.total_deducir" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
+                                <b>General scheme result: </b>
+                                <span t-field="o.casilla_46" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                             </div>
                             <div class="col-xs-3">
                                 <b>[65] % attributable to State: </b>
                                 <span t-field="o.porcentaje_atribuible_estado"/><br></br>
                                 <b>[66] Attributable to Administration: </b>
-                                <span t-field="o.atribuible_estado"/><br></br>
+                                <span t-field="o.atribuible_estado" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                                 <b>[67] Fees to compensate: </b>
-                                <span t-field="o.cuota_compensar"/><br></br>
+                                <span t-field="o.cuota_compensar" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                             </div>
                             <div class="col-xs-3">
                                 <b>[68] Annual regularization: </b>
-                                <span t-field="o.regularizacion_anual"/><br></br>
+                                <span t-field="o.regularizacion_anual" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                                 <b>[77] Vat deferred (Settle by customs): </b>
-                                <span t-field="o.casilla_77"/><br></br>
+                                <span t-field="o.casilla_77" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                                 <b>[69] Result: </b>
-                                <span t-field="o.casilla_69"/><br></br>
+                                <span t-field="o.casilla_69" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                                 <b>[67] To be deducted</b>
-                                <span t-field="o.previous_result"/><br></br>
+                                <span t-field="o.previous_result" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                             </div>
                             <div class="col-xs-3">
                                 <b>[71] Settlement result: </b>
-                                <span t-field="o.resultado_liquidacion"/><br></br>
+                                <span t-field="o.resultado_liquidacion" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/><br></br>
                                 <div t-if="o.exonerated_390 != '2'">
                                     <b>[88] Total volumen operaciones</b>
                                     <span t-field="o.result_type"/><br></br>
