[FIX] Add company to mod303

--- a/cb_l10n_es_aeat_mod303/views/aeat_mod_303report.xml
+++ b/cb_l10n_es_aeat_mod303/views/aeat_mod_303report.xml
@@ -43,6 +43,8 @@
                                     <span>-</span>
                                     <span t-field="o.date_end"/>
                                 </div>
+                                <b>Company: </b>
+                                <span t-esc="o.company_id.name"/><br></br>
                             </div>
                             <div class="col-xs-6">
                                 <div t-if="o.allow_posting">
