--- a/cb_medical_sale_invoice/views/account_invoice_views.xml
+++ b/cb_medical_sale_invoice/views/account_invoice_views.xml
@@ -8,6 +8,8 @@
         <field name="arch" type="xml">
            <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='product_id']" position="after">
                <field name="patient_name" readonly="1"/>
+               <field name="subscriber_id"/>
+               <field name="authorization_number"/>
            </xpath>
         </field>
     </record>
