--- a/cb_medical_sale_invoice/views/report_invoice.xml
+++ b/cb_medical_sale_invoice/views/report_invoice.xml
@@ -9,10 +9,10 @@
             <th t-if="o.is_medical and o.show_authorization">Authorization</th>
         </xpath>
         <xpath expr="//table[@name='invoice_line_table']/tbody/t/tr[1]/t/td[2]" position="after">
-            <td t-if="o.is_medical and o.show_patient"><span t-field="l.patient_name"/></td>
-            <td t-if="o.is_medical"><span t-field="l.encounter_id.create_date" t-options="{'widget': 'date'}"/></td>
-            <td t-if="o.is_medical and o.show_subscriber"><span t-field="l.subscriber_id"/></td>
-            <td t-if="o.is_medical and o.show_authorization"><span t-field="l.authorization_number"/></td>
+            <td t-if="o.is_medical and o.show_patient"><span t-field="line.patient_name"/></td>
+            <td t-if="o.is_medical"><span t-field="line.encounter_id.create_date" t-options="{'widget': 'date'}"/></td>
+            <td t-if="o.is_medical and o.show_subscriber"><span t-field="line.subscriber_id"/></td>
+            <td t-if="o.is_medical and o.show_authorization"><span t-field="line.authorization_number"/></td>
         </xpath>
         <xpath expr="//table[@name='invoice_line_table']/tbody/t/t/tr[1]/td[1]" position="after">
             <td t-if="o.is_medical and o.show_patient"/>
