--- a/cb_medical_sale_invoice/views/medical_encounter_views.xml
+++ b/cb_medical_sale_invoice/views/medical_encounter_views.xml
@@ -5,6 +5,7 @@
         <field name="model">medical.encounter</field>
         <field name="inherit_id"
                ref="cb_medical_careplan_sale.medical_encounter_view_form"/>
+        <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button type="object"
