--- a/cb_medical_administration_healthcare_service/views/res_partner_views.xml
+++ b/cb_medical_administration_healthcare_service/views/res_partner_views.xml
@@ -14,11 +14,26 @@
                ref="cb_medical_administration_practitioner_specialty.res_partner_view_form"/>
         <field name="arch" type="xml">
             <field name="practitioner_role_id" position="attributes">
-                <attribute name="attrs">{'required': [('is_practitioner','=',True), ('is_healthcare_service', '=', False)], 'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)],'readonly':[('edit_practitioner', '=', False)]}</attribute>
+                <attribute name="attrs">{'required': [('is_practitioner','=',True), ('is_healthcare_service', '=', False)], 'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)]}</attribute>
             </field>
 
             <field name="specialty_id" position="attributes">
-                <attribute name="attrs">{'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)],'readonly':[('edit_practitioner', '=', False)], 'required': [('specialty_required', '=', True)]}</attribute>
+                <attribute name="attrs">{'invisible': ['|', ('is_practitioner','=',False), ('is_healthcare_service', '=', True)], 'required': [('specialty_required', '=', True)]}</attribute>
+            </field>
+        </field>
+    </record>
+
+    <record id="res_partner_view_edit_form" model="ir.ui.view">
+        <field name="name">res.partner.view.form</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="cb_medical_administration_healthcare_service.res_partner_view_form"/>
+        <field name="groups_id" eval="[(4, ref('medical_administration_practitioner.group_medical_practitioner_manager'))]"/>
+        <field name="arch" type="xml">
+            <field name="practitioner_role_id" position="attributes">
+                <attribute name="readonly">0</attribute>
+            </field>
+            <field name="specialty_id" position="attributes">
+                <attribute name="readonly">0</attribute>
             </field>
         </field>
     </record>
