--- a/cb_medical_financial_coverage_agreement/views/product_views.xml
+++ b/cb_medical_financial_coverage_agreement/views/product_views.xml
@@ -33,6 +33,9 @@
                         string="View Agreements"
                 />
             </xpath>
+            <field name="categ_id" position="after">
+                <field name="agreement_comment"/>
+            </field>
         </field>
     </record>
 
