--- a/cb_medical_sale_invoice/views/account_invoice_views.xml
+++ b/cb_medical_sale_invoice/views/account_invoice_views.xml
@@ -9,7 +9,7 @@
                 expr="//field[@name='invoice_line_ids']/tree/field[@name='product_id']"
                 position="after"
             >
-                <field name="patient_name" readonly="1" />
+                <field name="patient_name" />
                 <field name="subscriber_id" />
                 <field name="authorization_number" />
             </xpath>
